prod/tvplatform-admin-gateway/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tvplatform-admin-gateway
  namespace: default
  labels:
    app: tvplatform-admin-gateway
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tvplatform-admin-gateway
      env: prod
  template:
    metadata:
      labels:
        app: tvplatform-admin-gateway
        env: prod
    spec:
      containers:
      - name: tvplatform-admin-gateway
        image: registry.digitalocean.com/obs-tvplatform-backend/tvplatform-admin-gateway:6-staging # will be updated by jenkins PRs
        imagePullPolicy: Always
      imagePullSecrets:
      - name: obs-tvplatform-backend
