prod/tvplatform-admin-gateway/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: admingw-cert
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: tvplatform-admin-bk
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.api.dev-ooro.co.uk
        - api.dev-ooro.co.uk
      secretName: admingw-cert
  rules:
    - host: www.api.dev-ooro.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tvplatform-admin-gateway
                port:
                  number: 8000
    - host: api.dev-ooro.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tvplatform-admin-gateway
                port:
                  number: 8000
